[package]
name = "rexml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["tokio-macros", "tracing", "full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.143", features = ["derive"] }
