[package]
name = "rexml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["tokio-macros", "tracing", "full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing-tree = "0.2.1"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.143", features = ["derive"] }
chrono = { version = "0.4.22", features = ["serde"] }
sqlx = { version = "0.6.1", features = ["sqlite", "runtime-tokio-rustls"] }
futures = "0.3.23"
axum = "0.5.15"
thiserror = "1.0.32"
minidom = "0.15.0"
tower-http = { version = "0.3.4", features = ["trace"] }
tower = "0.4.13"
